# tokilm

./: .env.example  .gitignore  PLAN.md  README.md  main.py  pyproject.toml  test_prepare_data.py  train_tokilm.ipynb  use_tokilm.ipynb
docs/: .gitignore  download.sh  index.html
tests/: test_prepare_data.py
tokilm/: __init__.py  __main__.py  config.py  dataset.py  eval_cases.py  inference.py  model.py  prepare_data.py  train.py
tools/: dataset_card.md  export_dataset.py  export_model.py  export_onnx.py  make_colab.py  model_card.md
