[project]
name = "tokilm"
version = "0.1.0"
description = "Tiny Toki Pona language model"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.0.1",
    "tokenizers>=0.19.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "datasets>=2.14.0",
]

[project.scripts]
tokilm = "tokilm.__main__:main"

[project.optional-dependencies]
cpu = ["numpy>=1.24.0", "torch>=2.0.1"]
gpu = ["numpy>=1.24.0", "torch>=2.0.1"]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
